force-app/main/default/objects/Account/fields/Approved_Airlines__c.field-meta.xml
<CustomField>
    <fullName>Approved_Airlines__c</fullName>
    <description>Airlines allowed under client&apos;s travel policy (for flight bookings), e.g. &quot;IndiGo, Air India, Vistara&quot;</description>
    <label>Approved Airlines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>