force-app/main/default/objects/Account/fields/Max_Hotel_Budget_Per_Night__c.field-meta.xml
<CustomField>
    <fullName>Max_Hotel_Budget_Per_Night__c</fullName>
    <description>Max per-night hotel budget allowed by client&apos;s travel policy — agent must stay within this limit while booking.</description>
    <label>Max Hotel Budget Per Night</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>