force-app/main/default/objects/Account/fields/Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings__c</fullName>
    <label>Total Bookings</label>
    <summaryForeignKey>Booking__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>