force-app/main/default/objects/Account/recordTypes/Partner_Agency.recordType-meta.xml
<RecordType>
    <fullName>Partner_Agency</fullName>
    <active>true</active>
    <label>Partner Agency</label>
</RecordType>