force-app/main/default/objects/Account/validationRules/Credit_Limit_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Limit_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Credit_Limit__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Credit_Limit__c</errorDisplayField>
    <errorMessage>Credit Limit cannot be negative.</errorMessage>
</ValidationRule>