force-app/main/default/objects/Account/listViews/Active_Partner_Agencies.listView-meta.xml
<ListView>
    <fullName>Active_Partner_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client_Type__c</field>
        <operation>equals</operation>
        <value>Partner Agency</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Active Partner Agencies</label>
</ListView>