force-app/main/default/objects/Account/listViews/Corporate_Clients.listView-meta.xml
<ListView>
    <fullName>Corporate_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client_Type__c</field>
        <operation>equals</operation>
        <value>Corporate Client</value>
    </filters>
    <label>Corporate Clients</label>
</ListView>